--- a/README
+++ b/README
@@ -7,9 +7,9 @@
 
 Kaggle Competition의 HubMAP-hacking the kidney와 MoA Prediction 프로젝트 그리고 Audio Digit Recognizer 프로젝트입니다.
 
-### AI Paper Implementation
+### AI Paper Review and Implementation
 
-발표된 논문의 Neural Network 구조에 대한 분석과 구현을 진행하였습니다.
+발표된 논문을 review하고 Pytorch로 구현하였습니다.
 
 ### Personal Projects
 개인적으로 진행한 프로젝트 내용을 업로드 하였습니다.
@@ -23,3 +23,4 @@ Aerospace Projects에는 항공우주공학 학부 및 석사과정에서 진행
 Airtcraft Design과 Propulsion System Design은 항공우주공학과 학부에서 진행했던 프로젝트이며,
 
 MS Thesis and Publication은 항공우주공학 석사과정 때 Scramjet 관련 실험 및 논문 내용을 담고 있습니다.
+ 
